--- a/LP/index.html
+++ b/LP/index.html
@@ -22,17 +22,17 @@
           <a class="gnav__menu__item__link" href="#sec1">SECTION1</a>
         </li>
         <li class="gnav__menu__item">
-          <a class="gnav__menu__item__link" href="">SECTION2</a>
+          <a class="gnav__menu__item__link" href="#sec2">SECTION2</a>
         </li>
         <li class="gnav__menu__item">
-          <a class="gnav__menu__item__link" href="">SECTION3</a>
+          <a class="gnav__menu__item__link" href="#sec3">SECTION3</a>
         </li>
       </ul>
     </nav>
   </header>
   <main>
     <div class="hero">
-      <img class="hero__img" src="images/mainvisual.jpg" alt="">
+      <img class="hero__img" src="images/bg.jpg" alt="">
     </div>
     <section class="sec page-title">
       <div class="inner">
@@ -52,7 +52,7 @@
         </div><!--text-container-->
       </div><!--flex-bet-->
     </section>
-    <section class="sec">
+    <section id="sec2" class="sec">
       <div class="flex flex--bet">
         <div class="text-container col2">
           <h2 class="text-container__title"><span class="text-container__title__inner">SECTION02</span></h2>
@@ -65,7 +65,7 @@
         </figure>
       </div><!--flex-bet-->
     </section>
-    <section class="sec">
+    <section id="sec3" class="sec">
       <div class="flex flex--bet">
         <figure class="img-container col2">
           <img class="img-container__img" src="images/img03.jpg" alt="img01">
