LPをtoC,toBで分けた

--- a/LP/toC/index.html
+++ b/LP/toC/index.html
@@ -19,13 +19,16 @@
     <nav class="gnav">
       <ul class="gnav__menu flex flex--bet">
         <li class="gnav__menu__item">
-          <a class="gnav__menu__item__link" href="#sec1">SECTION1</a>
+          <a class="gnav__menu__item__link" href="#sec1">Hackとは</a>
         </li>
         <li class="gnav__menu__item">
-          <a class="gnav__menu__item__link" href="#sec2">SECTION2</a>
+          <a class="gnav__menu__item__link" href="#sec2">参加方法</a>
         </li>
         <li class="gnav__menu__item">
-          <a class="gnav__menu__item__link" href="#sec3">SECTION3</a>
+          <a class="gnav__menu__item__link" href="#sec3">エントリー</a>
+        </li>
+        <li class="gnav__menu__item">
+          <a class="gnav__menu__item__link" href="#sec4">企業の皆様</a>
         </li>
       </ul>
     </nav>
@@ -36,7 +39,8 @@
     </div>
     <section class="sec page-title">
       <div class="inner">
-        <h2 class="page-title__title">jQueryで下スクロールで消えて、<br>上スクロールで出てくる<br>グローバルナビゲーションを作る</h2>
+        <h4 class="page-title__title">
+        ハッカソンに参加して内定を最短でもらおう！</h2>
       </div><!--inner-->
     </section>
     <section id="sec1" class="sec">
@@ -45,9 +49,9 @@
           <img class="img-container__img" src="images/img01.jpg" alt="img01">
         </figure>
         <div class="text-container col2">
-          <h2 class="text-container__title"><span class="text-container__title__inner">SECTION01</span></h2>
+          <h2 class="text-container__title"><span class="text-container__title__inner">STEP 1</span></h2>
           <p class="text-container__text">
-          タブレットやスマフォで活きるテクニックなので、PCでは通常の固定ヘッダーで、タブレットやスマフォで閲覧した際は消えるようにするのもいいかもです。
+          気になるハッカソンにエントリーしてみよう。協賛企業もチェック！
           </p>
         </div><!--text-container-->
       </div><!--flex-bet-->
@@ -55,9 +59,9 @@
     <section id="sec2" class="sec">
       <div class="flex flex--bet">
         <div class="text-container col2">
-          <h2 class="text-container__title"><span class="text-container__title__inner">SECTION02</span></h2>
+          <h2 class="text-container__title"><span class="text-container__title__inner">STEP 2</span></h2>
           <p class="text-container__text">
-          タブレットやスマフォで活きるテクニックなので、PCでは通常の固定ヘッダーで、タブレットやスマフォで閲覧した際は消えるようにするのもいいかもです。
+         ハッカソンに参加して、全力を尽くすのみ！
           </p>
         </div><!--text-container-->
         <figure class="img-container col2">
@@ -71,9 +75,10 @@
           <img class="img-container__img" src="images/img03.jpg" alt="img01">
         </figure>
         <div class="text-container col2">
-          <h2 class="text-container__title"><span class="text-container__title__inner">SECTION03</span></h2>
+          <h2 class="text-container__title"><span class="text-container__title__inner">STEP 3</span></h2>
           <p class="text-container__text">
-          タブレットやスマフォで活きるテクニックなので、PCでは通常の固定ヘッダーで、タブレットやスマフォで閲覧した際は消えるようにするのもいいかもです。
+          企業からのフィードバックを貰いましょう！
+          優秀者は特別先行ルートがもらえます
           </p>
         </div><!--text-container-->
       </div><!--flex-bet-->
