--- a/LP/toC/index.html
+++ b/LP/toC/index.html
@@ -14,7 +14,7 @@
 <body id="top">
   <header class="site-header flex flex--bet">
     <h1 class="site-logo">
-      <img class="site-logo__img" src="images/logo.png" alt="logo">
+      Hack
     </h1>
     <nav class="gnav">
       <ul class="gnav__menu flex flex--bet">
@@ -87,7 +87,7 @@
   <footer class="site-footer">
     <div class="inner flex flex--bet">
       <div class="footer-logo">
-        <img class="site-logo__img" src="images/logo-white.png" alt="logo">
+        Hack
       </div><!--footer-logo-->
       <ul class="footer-nav">
         <li class="footer-nav__item"><a class="footer-nav__item__link" href="#top">Back to Top</a></li>
